--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sharp": "^0.33.2",
     "svelte": "^4.2.12",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "pnpm": "^8.15.6"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.6.0",
