--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
       - name: Setup pnpm
         uses: pnpm/action-setup@v3.0.0
       - name: Deploy to GitHub Pages
